2010-10-27  Robert Larice
 * src/frontend/device.c :
    bug fix, const data space was used, instead of malloced area

2010-10-27  Robert Larice
 * src/spicelib/devices/asrc/asrcset.c ,
 * src/xspice/mif/mifgetvalue.c :
    realloc does work, even with NULL argument

2010-10-27  Robert Larice
 * src/spicelib/devices/bsim3soi/b4soitemp.c :
    use tmalloc instead of malloc

2010-10-27  Robert Larice
 * src/spicelib/analysis/cktmcrt.c ,
 * src/spicelib/analysis/cktnewan.c ,
 * src/xspice/cm/cmevt.c ,
 * src/xspice/evt/evtload.c :
    use tmalloc and trealloc instead of MALLOC and REALLOC

2010-10-27  Robert Larice
 * src/spicelib/analysis/distoan.c :
    bug fix ?, this fix is a mere guesswork, FIXME

2010-10-27  Robert Larice
 * src/spicelib/devices/ltra/ltraask.c ,
 * src/spicelib/devices/tra/traask.c :
    bug fix, malloced space too small

2010-10-25  Holger Vogt
 * src/frontend/inpcom.c: add guards if strstr returns NULL

2010-10-24  Robert Larice
 * src/frontend/inpcom.c ,
 * src/frontend/subckt.c :
  trealloc usage unification

2010-10-24  Robert Larice
 * src/spicelib/devices/ltra/ltramisc.c :
  MALLOC usage unification, (in comments)

2010-10-24  Robert Larice
 * src/frontend/com_compose.c ,
 * src/frontend/plotting/plotcurv.c ,
 * src/maths/poly/interpolate.c :
  tmalloc usage unification, parenthesize some terms

2010-10-24  Robert Larice
 * src/spicelib/devices/asrc/asrcset.c ,
 * src/xspice/mif/mif_inp2.c :
  RALLOC usage unification, drop braces around the second argument

2010-10-24  Robert Larice
 * src/spicelib/devices/ndev/ndevset.c :
  use char* instead of void*

2010-10-24  Robert Larice
 * src/frontend/hpgl.c ,
 * src/frontend/plotting/plot5.c ,
 * src/frontend/plotting/x11.c ,
 * src/frontend/postsc.c ,
 * src/frontend/wdisp/windisp.c ,
 * src/frontend/wdisp/winprint.c ,
 * src/include/graph.h ,
 * src/tclspice.c :
  struct member devdep, use void* instead of char*

2010-10-24  Robert Larice
 * src/frontend/help/readhelp.c ,