@@ -1,3 +1,9 @@
+2010-10-28  Robert Larice
+ * src/frontend/commands.c ,
+ * src/frontend/control.c :
+    bug fix, incorrect handling of `co_spiceonly' commands
+      http://sourceforge.net/tracker/?func=detail&aid=3092998&group_id=38962&atid=423915
+
 2010-10-27  Robert Larice
  * src/frontend/device.c :
     bug fix, const data space was used, instead of malloced area
